# codex-switch

./: .gitattributes  .gitignore  AGENTS.md  CODE_SIGNING.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accounts.rs  api_config.rs  codex_config.rs  codex_launcher.rs  codex_session_usage.rs  codex_sessions.rs  commands.rs  desktop.rs  events.rs  json_file.rs  json_util.rs  main.rs  oauth_flow.rs  paths.rs  proxy_config.rs  quota.rs  session_manager.rs  session_sync_diagnostics.rs  settings.rs  time_util.rs  updater.rs  usage_stats.rs
src-tauri/src/accounts/: account_builders.rs  api_mode.rs  auth_file.rs  import_export.rs  oauth_tokens.rs  store.rs  usage.rs
src-tauri/src/accounts/api_mode/: profile.rs  state.rs
src-tauri/src/accounts/import_export/: export.rs  import.rs  tokens.rs
src-tauri/src/accounts/oauth_tokens/: claims.rs  exchange.rs  pkce.rs
src-tauri/src/accounts/store/: model.rs  operations.rs  payload.rs  persistence.rs
src-tauri/src/accounts/usage/: client.rs  state.rs
src-tauri/src/codex_config/: io.rs  parse.rs  write.rs
src-tauri/src/codex_launcher/: codex_app.rs  codex_app_instances.rs  codex_app_open.rs  codex_app_watcher.rs  computer_use_repair.rs  ide_snapshot.rs  plugin_watcher.rs  plugins.rs  process_control.rs  remote_control.rs  scripts.rs  shell.rs
src-tauri/src/codex_launcher/codex_app/: package.rs  process.rs  proxy.rs
src-tauri/src/codex_launcher/ide_snapshot/: detect.rs  pending.rs  restart.rs
src-tauri/src/codex_session_usage/: parser.rs  scanner.rs
src-tauri/src/codex_session_usage/parser/: event.rs  file.rs  normalize.rs
src-tauri/src/codex_session_usage/scanner/: date_dirs.rs  home.rs  recent.rs  recursive.rs
src-tauri/src/codex_sessions/: tests.rs
src-tauri/src/commands/: account.rs  general.rs  gpt_pool.rs  quota.rs
src-tauri/src/commands/account/: import_export.rs  mode.rs  refresh.rs
src-tauri/src/desktop/: autostart.rs  runtime.rs  tray.rs  window.rs
src-tauri/src/oauth_flow/: callback_server.rs  cancel.rs  runtime.rs  start.rs  submit.rs
src-tauri/src/proxy_config/: endpoint.rs  environment.rs  normalize.rs
src-tauri/src/quota/: active_usage.rs  auth_refresh.rs  refresh_all.rs  usage_store.rs
src-tauri/src/settings/: defaults.rs  normalize.rs  store.rs
src-tauri/src/updater/: check.rs  download.rs  service.rs  state.rs
src-tauri/windows/: installer.nsi
src-tauri/windows/languages/: English.nsh  SimpChinese.nsh
(+153 files in other folders)
